favicon and page titles more desciprtive for browser tabs to use, rosalution version in footer

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 COPY package.json /app/
 COPY yarn.lock /app/
 COPY index.html /app/
+COPY public/rosalution.ico /app/public/rosalution/rosalution.ico
 COPY vite.config.js /app/
 RUN yarn install
 EXPOSE 3000
@@ -17,6 +18,7 @@ COPY package.json /app/
 COPY yarn.lock /app/
 COPY index.html /app/
 COPY vite.config.js /app/
+COPY public/rosalution.ico /app/public/rosalution/rosalution.ico
 ARG VERSION_BUILD_TAG=latest
 
 ENV VITE_ROSALUTION_VERSION=$VERSION_BUILD_TAG
@@ -27,4 +29,5 @@ FROM nginx:1.26.2-alpine3.20 AS production-stage
 
 COPY etc/default.conf /etc/nginx/conf.d/
 COPY --from=production-build /app/dist/ /usr/share/nginx/html/
+COPY public/rosalution.ico /usr/share/nginx/html/rosalution/rosalution.ico
 EXPOSE 80
