--- a/etc/fixtures/initial-seed/projects.json
+++ b/etc/fixtures/initial-seed/projects.json
@@ -1,14 +1,20 @@
 [
-  { 
-    "_id": { "$oid": "695d5b157709ebcd1c7325c0" },
+  {
+    "_id": {
+      "$oid": "695d5b157709ebcd1c7325c0"
+    },
     "name": "Ciliopathies"
   },
   {
-    "_id": { "$oid": "695d5b157709ebcd1c7325c1" },
+    "_id": {
+      "$oid": "695d5b157709ebcd1c7325c1"
+    },
     "name": "CPAM"
   },
   {
-    "_id": { "$oid": "695d5b157709ebcd1c7325c4" },
+    "_id": {
+      "$oid": "695d5b157709ebcd1c7325c4"
+    },
     "name": "LW"
   }
 ]
