--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ python-cas==1.6.0
 itsdangerous==2.1.2
 pymongo==4.6.3
 jq==1.8.0
+pyinstrument==5.1.2
 
 python-multipart==0.0.20
 PyJWT[crypto]==2.8.0
