Added simple support to bundle run output into a shared directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       - ./backend:/app
     environment:
       - MONGODB_HOST=rosalution-db
+      - PROFILER_ENABLED=True
     command: ['./etc/entrypoint-init.sh', '--reload']
     networks:
       - rosalution-network
