Changing the benchmark test to render profile output as the default HTML website, and for dev staging to enable profiling by default

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -24,6 +24,8 @@ services:
       - ROSALUTION_ENV=production
       - MONGODB_HOST=rosalution-db
       - CAS_LOGIN_ENABLE=True
+      - PROFILER_ENABLED=True
+      - PROFILER_ENABLED=True
     command: ['./entrypoint-init.sh']
     deploy:
       labels:
