updated gitignore to ingnore the bundled benchmark artifacts that are compressed together in a tar.gz

--- a/.gitignore
+++ b/.gitignore
@@ -84,5 +84,6 @@ etc/.rosalution-db-backups
 secrets.file
 profile.html
 **benchmark-run**/
+**benchmark-run**.tar.gz
 *speedscope.json
 k6-summary*
