Preliminary rosalution benchmarking and instrumentation (#216)
* preliminary work to add basic benchmarking to the rosalution backend service
* Added simple support to bundle run output into a shared directory
* Pyinstrument for python FastAPI REST API profiling as FastAPI middleware and Grafana K6 for benchmarking; experimented with preliminarily upgrading fastapi to latest, OrJSON for serializing Rosalution requests, and changing how the analysis pydantic model works to try out performance changes
* worked out the bundling profiling script artifacts to gather a pyinstrument profiling from either local, remote host with scp, local docker container, or remote docker container using ssh
* Improved bundling and added updates to the package.json to benchmark profiling to be bundled on dev
* Expanding the benchmarking readme documentation
* Changing the benchmark test to render profile output as the default HTML website, and for dev staging to enable profiling by default
* updated gitignore to ingnore the bundled benchmark artifacts that are compressed together in a tar.gz

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,10 @@ etc/.rosalution-db-backups
 **/screen_capture_annotate_env/**
 
 *.csv
+
+secrets.file
+profile.html
+**benchmark-run**/
+**benchmark-run**.tar.gz
+*speedscope.json
+k6-summary*
